--- a/static/main.css
+++ b/static/main.css
@@ -7,8 +7,56 @@ body{
 }
 
 .grid_container {
-	width:100vw;
-	height:100px;
+	padding:10px;
 }
 
+.cell {
+	border: 1px solid black;
+	background-color:white;
+}
 
+.row {
+	display:flex;
+}
+
+main {
+	height:90vh;
+	display:flex;
+}
+
+header {
+	display:flex;
+	align-items:center;
+	width:100%;
+	box-shadow:0.125em 0 2px black;
+	padding:8px 0;
+}
+
+.about {
+	margin-right:15px;
+	padding:8px;
+}
+
+.about:hover{
+	background-color:black;
+	color:white;
+	padding:8px;
+}
+
+.title {
+	margin: 0 auto;
+	font-size:24px;
+	font-weight:800;
+}
+
+header span {
+}
+
+.grid_panel {
+	margin-top: 8px;
+}
+
+.grid_settings {
+	outline: solid 1px black;
+	padding:8px;
+}
