--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Silkscreen:wght@400;700&display=swap');
+
 body{
 	margin:0;
 	padding:0;
@@ -27,6 +29,9 @@ main {
 }
 
 header {
+	font-family:"Silkscreen", sans-serif;
+	font-style:normal;
+	font-weight:400;
 	display:flex;
 	align-items:center;
 	width:100%;
@@ -36,6 +41,7 @@ header {
 
 .about {
 	margin-right:15px;
+	cursor:pointer;
 	padding:8px;
 }
 
@@ -59,6 +65,8 @@ header span {
 }
 
 .grid_settings {
+	font-family: "Chakra Petch", sans-serif;
+	font-weight:500;
 	outline: solid 1px black;
 	display:flex;
 	flex-direction: column;
@@ -70,6 +78,8 @@ header span {
 }
 
 .grid_settings > button {
+	font-family: "Chakra Petch", sans-serif;
+	font-weight:500;
 	width:90px;
 }
 
@@ -86,10 +96,10 @@ header span {
 }
 
 .modal_content {
-	margin: 15% auto;
+	margin: 3% auto;
 	width:97%;
 	background-color:white;
-	height:300px;
+	height:85%;
 	display:flex;
 	flex-direction:column;
 	gap:20px;
@@ -102,9 +112,30 @@ header span {
 }
 
 .modal_info{
+	text-align:center;
 	display:flex;
 	gap:8px;
 	justify-content:space-evenly;
+	height:1000px;
+}
+
+.modal_setting {
+	display:flex;
+	flex-direction:column;
+	gap:20px;
+}
+
+.modal_setting label{
+	text-align:left;
+}
+
+.modal_content .title {
+	font-family: "Silkscreen", sans-serif;
+	font-weight:500;
+}
+
+.attention{
+	font-size:18px;
 }
 
 #resize_demo{
@@ -120,5 +151,37 @@ header span {
 
 .close{
 	cursor:pointer;
+}
+
+#newGridBtn{
+	font-family:"Silkscreen", sans-serif;
+	font-weight:400;
+	width:300px;
+	margin: 0 auto;
+}
+
+#about_text{
+	margin:0 auto;
+	align-items: center;
+}
+
+#about_text p{
+	line-height:1.3em;
+	margin:0 auto;
+	font-family: "Chakra Petch", sans-serif;
+	font-size:18px;
+	width:50%;
+}
+
+.socials_link{
+	list-style:none;
+	display:flex;
+	padding:0;
+	margin-top:15%;
+	gap: 8px;
+	a {
+		text-decoration:none;
+		color: black;
+	}
 }
 
